# FreezeCam

./: .gitignore  README.md  package-lock.json  package.json
installer/: nsis-hooks.nsh
native/addon/: addon.cpp  binding.gyp  package.json
native/shared/: shared_memory.h
native/virtual-camera/: CMakeLists.txt  class_factory.cpp  class_factory.h  dllmain.cpp  exports.def  guids.h  logger.h  virtual_camera_filter.cpp  virtual_camera_filter.h  virtual_camera_pin.cpp  virtual_camera_pin.h
scripts/: build-all.bat  disable-frameserver.bat  enable-frameserver.bat  register-camera.bat  unregister-camera.bat
src/main/: main.js  preload.js
src/renderer/: app.js  index.html  styles.css
